--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             const wordwallData = {
                  // 初級一 (1-12 課)
     1: { 
-        vocab: "https://wordwall.net/embed/73214/268/792", 
+        vocab: "https://wordwall.net/tc/embed/1b3bc5c1e50145239baaf1ae8bce94ea?themeId=41&templateId=76&fontStackId=0", 
         kanji: "", // 喺度貼上第一課嘅漢字 Link
         match: "", 
         grammar: "" 
